--- a/user_config.json
+++ b/user_config.json
@@ -1,21 +1,16 @@
 {
   "extra_cmdline": {
-    "pid": "0xa4a5",
-    "vid": "0x0525",
-    "sn": "1230LWN009033",
-    "mac1": "0011322A46E7",
-    "SataPortMap": "58",
-    "DiskIdxMap": "0A00"
+    "vid": "0x46f4",
+    "pid": "0x0001",
+    "sn": "1234XXX123",
+    "mac1": "MAC1ADDRESS",
+    "mac2": "MAC2ADDRESS",
+    "netif_num" : "2"
   },
   "synoinfo": {
-
-          "internalportcfg" : "0xffff",
-          "maxdisks" : "16"
-
-},
-  "ramdisk_copy": {
-
-    
-}
-
+    "supportsystemperature": "no",
+    "supportsystempwarning": "no"
+  },
+  "ramdisk_copy": {},
+  "extensions": []
 }
